<resources>
    <string name="app_name">Whendidiwork</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="whendidiwork">Whendidiwork</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_calendar">Calendar:</string>
    <string name="select_sheet">Sheet:</string>
    <string name="divider">divider</string>
    <string name="create_calendar">Create Calendar</string>
    <string name="create_sheet">Create Sheet</string>
    <string name="create_event">Create Event</string>
    <string name="create_calendar_instructions">Just enter the name of the Calendar you would like to create.</string>
    <string name="create_sheet_instructions">Just enter the name of the Sheet you would like to create. The name will be prepended with whendidiwork@</string>
    <string name="create">Create</string>
    <string name="storedPrefs">com.brandonlehr.whendidiwork.storedPrefs</string>
    <string name="whendidiwork_at">whendidiwork@</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="summary">Summary</string>
    <string name="create_an_event">Create an Event</string>
    <string name="update_an_event">Update Event</string>
    <string name="select_a_calendar">Select a Calendar</string>
    <string name="select_a_sheet">Select a Sheet</string>
    <string name="can_only_update">Remember * only events created using whendidiwork can be updated *</string>
    <string name="help">Help!</string>
    <string name="help_text">Some tips on getting the most out of whendidiwork:\n\n  Make sure end times do NOT fall before start times.\n\n  Only events created by whendidiwork can be edited or deleted.</string>
    <string name="channel_name">whendidiworkchannel</string>
    <string name="channel_description">Track your time</string>
    <string name="timer">Timer</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="swipe_to_">Swipe right to edit, left to delete</string>
    <string name="home_instructions">Select a calendar and a sheet, and review previous events</string>
    <string name="the_faq">The FAQ</string>
    <string name="first_faq_heading">No sheets are showing up in the select sheet drop down!</string>
    <string name="first_faq">The app searches your Google Drive for all sheets with “whendidiwork@” in their name. Nothing will show up if they have been trashed or if no sheets with this name have been created yet.</string>
    <string name="second_faq_heading">What if I no longer want a particular spreadsheet to show up in the drop down?</string>
    <string name="second_faq">Well, it depends on your reason. If you no longer want the sheet even in your Goggle Drive, just delete it. If you on the other hand have finished the job or project, or want to start a new sheet for a new month or year, etc., just rename the sheet you want to hide from the app. As long as the name doesn\'t contain “whendidiwork@” it won\'t appear in the list.</string>
    <string name="third_faq_heading">Do I have to create a new calendar?</string>
    <string name="third_faq">Not if you don\'t want to. I personally track all of my times on one calendar named whendidiwork, and then separate different jobs or activities onto their own spreadsheets.</string>
    <string name="fourth_faq_heading">Why don\'t all of the calendar events show up when I select a calendar?</string>
    <string name="fourth_faq">When a calendar is selected, all currently recorded events from one week past, until one week future are displayed.</string>
    <string name="fifth_faq_heading">Why do I get a message stating the event can\'t be edited/deleted?</string>
    <string name="fifth_faq">Only events created through the app are able to be edited or deleted. Any events created directly on the calendar itself cannot be modified through the whendidiwork app.</string>
    <string name="six_faq_heading">I tried it, don\'t like it, and want to revoke all of the permissions I accepted when I first logged in!</string>
    <string name="six_faq">No problem! Just follow this link to Google Account Permissions, select the whendidiwork application and press revoke.</string>
    <string name="questions">Questions, Concerns?</string>
    <string name="email_contact">blehr.mail@gmail.com</string>
    <string name="twitter_contact">\@brandonlehr</string>
    <string name="faq">FAQ</string>
    <string name="revoke_permissions">Revoke Permissions</string>
    <string name="welcome_text">Whendidiwork is a web app for tracking work, project, or hours of any kind, on your Google Calendar and a Google Spreadsheet. Create a spreadsheet for each job you desire to track. Then choose to enter events on your primary calendar, or create a new whendidiwork calendar.</string>
    <string name="welcome_text_2">Keep track of everything in one convenient place!</string>
    <string name="whendidiwork_questionmark">whendidiwork?</string>
    <string name="no_sheets">No Sheets</string>
    <string name="need_to_create_a_sheet">To begin using whendidiwork, first create a new Google Sheet to record your times. Start by clicking the overflow menu in the appbar and selecting Create Sheet.</string>
    <string name="title_activity_maps">Map</string>
    <string name="clear">Clear</string>
    <string name="set">Set</string>
    <string name="enable">enable</string>
    <string name="disable">Disabled</string>

</resources>
