<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/faq_menu_item"
        android:title="@string/faq" />
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/createSheet"
        android:icon="@drawable/ic_action_file"
        android:title="@string/create_sheet"
        app:showAsAction="never" />
    <item
        android:id="@+id/createCalendar"
        android:icon="@drawable/ic_action_calendar"
        android:title="@string/create_calendar"
        app:showAsAction="never" />
    <item
        android:id="@+id/setting_sign_out"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/sign_out"
        app:showAsAction="never" />
</menu>