<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brandonlehr.whendidiwork.FaqActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/faq_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/whendidiwork"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

            <TextView
                android:id="@+id/faq_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/the_faq"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq_heading" />

            <TextView
                android:id="@+id/first_faq_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/first_faq_heading"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq_faq" />

            <TextView
                android:id="@+id/first_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/first_faq"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_faq_heading" />

            <TextView
                android:id="@+id/second_faq_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/second_faq_heading"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_faq" />

            <TextView
                android:id="@+id/second_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/second_faq"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second_faq_heading" />

            <TextView
                android:id="@+id/third_faq_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/third_faq_heading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/third_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/third_faq" />

            <TextView
                android:id="@+id/fourth_faq_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/fourth_faq_heading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fourth_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/fourth_faq" />

            <TextView
                android:id="@+id/fifth_faq_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/fifth_faq_heading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fifth_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/fifth_faq" />

            <TextView
                android:id="@+id/six_faq_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/six_faq_heading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/six_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/six_faq" />

            <Button
                android:id="@+id/google_permissions_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/revoke_permissions"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/question_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/questions"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="@string/email_contact"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/twitter_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="@string/twitter_contact"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
